manifests/multi-user/mlx-api-auth.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlx-api
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /apis/v1alpha1
    rewrite:
      uri: /apis/v1alpha1
    route:
    - destination:
        host: mlx-api.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mlx-api
  namespace: kubeflow
spec:
  host: mlx-api.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
