manifests/multi-user/mlx-ui-auth.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  host: mlx-ui.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
